Rename all use of 'rebate' in server endpoints to 'application' and rename 'form' status api endpoint to 'application-form'
