# docs/csb-openapi.json
@@ -33,9 +33,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/status/form": {
+    "/status/application-form": {
       "get": {
-        "summary": "/status/form",
+        "summary": "/status/application-form",
         "responses": {
           "200": {
             "description": "OK"
@@ -142,9 +142,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/help/rebate-form-submission/{id}": {
+    "/help/application-form-submission/{id}": {
       "get": {
-        "summary": "/help/rebate-form-submission/{id}",
+        "summary": "/help/application-form-submission/{id}",
         "parameters": [
           {
             "name": "id",
@@ -192,7 +192,7 @@
         "tags": []
       },
       "post": {
-        "summary": "/help/rebate-form-submission/{id}",
+        "summary": "/help/application-form-submission/{id}",
         "parameters": [
           {
             "name": "id",
@@ -479,9 +479,9 @@
         ]
       }
     },
-    "/api/rebate-form-submission": {
+    "/api/application-form-submission": {
       "post": {
-        "summary": "/api/rebate-form-submission",
+        "summary": "/api/application-form-submission",
         "responses": {
           "200": {
             "description": "OK",
@@ -501,9 +501,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/api/rebate-form-submissions": {
+    "/api/application-form-submissions": {
       "get": {
-        "summary": "/api/rebate-form-submissions",
+        "summary": "/api/application-form-submissions",
         "responses": {
           "200": {
             "description": "OK",
@@ -523,9 +523,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/api/rebate-form-submission/{id}": {
+    "/api/application-form-submission/{id}": {
       "get": {
-        "summary": "/api/rebate-form-submission/{id}",
+        "summary": "/api/application-form-submission/{id}",
         "parameters": [
           {
             "name": "id",
@@ -573,7 +573,7 @@
         "tags": []
       },
       "post": {
-        "summary": "/api/rebate-form-submission/{id}",
+        "summary": "/api/application-form-submission/{id}",
         "parameters": [
           {
             "name": "id",
